--- a/hobby.html
+++ b/hobby.html
@@ -15,7 +15,7 @@
 <div class="header">
     <h1>Welcome to My Guitar Page</h1>
     <p class="highlight playwrite-au-vic-guides-regular">Sharing my passion for music and the guitar</p>
-    <a href="/index.html">Back to Home</a>
+    <a href="./index.html">Back to Home</a>
     |
     <!-- Anchor Link -->
     <a href="#top-videos">My Guitar Performance</a>
