--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <main class="container">
         <nav>
             <ul>
-              <li><strong><a href="/index.html">Josh Graham</a></strong></li>
+              <li><strong><a href="./index.html">Josh Graham</a></strong></li>
             </ul>
             <ul>
-              <li><a href="/resume.html" class="contrast">Resume</a></li>
-              <li><a href="/snake.html" class="contrast">Snake Game</a></li>
-              <li><a href="/hobby.html" class="contrast">Guitar</a></li>
+              <li><a href="./resume.html" class="contrast">Resume</a></li>
+              <li><a href="./snake.html" class="contrast">Snake Game</a></li>
+              <li><a href="./hobby.html" class="contrast">Guitar</a></li>
               
               
             </ul>
@@ -31,8 +31,8 @@
     service and attending activities with others in my same age group. Life so
     far has been a journey of curiosity, growth, and a love for technology.</p>
 <p>
-    Take a look at my <a href="/resume.html">resume</a> to learn more about my professional life, or <a
-        href="/snake.html">snake game</a> for some fun and adventure!
+    Take a look at my <a href="./resume.html">resume</a> to learn more about my professional life, or <a
+        href="./snake.html">snake game</a> for some fun and adventure!
 </p>
       </main>    
 </body>
