--- a/resume.html
+++ b/resume.html
@@ -11,12 +11,12 @@
 <main class="container">
     <nav>
         <ul>
-            <li><strong><a href="/index.html">Josh Graham</a></strong></li>
+            <li><strong><a href="./index.html">Josh Graham</a></strong></li>
         </ul>
         <ul>
-            <li><a href="/resume.html" class="contrast">Resume</a></li>
-            <li><a href="/hobby.html" class="contrast">Guitar</a></li>
-            <li><a href="/snake.html" class="contrast">Snake Game</a></li>
+            <li><a href="./resume.html" class="contrast">Resume</a></li>
+            <li><a href="./hobby.html" class="contrast">Guitar</a></li>
+            <li><a href="./snake.html" class="contrast">Snake Game</a></li>
         </ul>
     </nav>
     <header>
