--- a/hobby.html
+++ b/hobby.html
@@ -45,8 +45,8 @@
     <h2 id="top-photos">My Guitar Wishlist</h2>
     <p>These are some of my favorite guitars!</p>
     <div class="image-gallery">
-        <img src="/assets/guitar1.jpg" alt="Classical Guitar">
-        <img src="/assets/guitar2.jpg" alt="Acoustic Guitar">
+        <img src="./assets/guitar1.jpg" alt="Classical Guitar">
+        <img src="./assets/guitar2.jpg" alt="Acoustic Guitar">
     </div>
 </div>
 
