--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
           </nav>
             <section>
-                <img src="/assets/profile.jpg" alt="Josh Graham Profile Pictures" width="800" style="margin: auto; display: block; border-radius: 10px;">
+                <img src="./assets/profile.jpg" alt="Josh Graham Profile Pictures" width="800" style="margin: auto; display: block; border-radius: 10px;">
             
             </section>
             <h1 style="text-align: center">Hi! 👋 I'm Josh Graham</h1>
